--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "bootstrap": "^5.2.1",
+    "bootstrap-vue": "^2.22.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-socket-io": "^2.0.3",
