--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 PORT=4040
 WS_URL=http://localhost:4000
 API_URL=http://localhost:4000
+GOOGLE_LOGIN_URL=http://localhost:4000/auth/google
+FACEBOOK_LOGIN_URL=http://localhost:4000/auth/facebook
