--- a/package.json
+++ b/package.json
@@ -14,19 +14,20 @@
   "dependencies": {
     "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
     "@nuxtjs/axios": "^5.13.6",
+    "nuxt-i18n": "^6.28.1",
     "bootstrap": "^5.2.1",
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "nuxt-socket-io": "^2.0.3",
     "socket.io-client": "^4.5.2",
+    "vee-validate": "^3.4.14",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.5.1"
   }
 }
