--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "socket.io-client": "^4.5.2",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
+    "vue-snotify": "^3.2.1",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
