dep: update env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=4040
-WS_URL=http://localhost:4000
-API_URL=http://localhost:4000
-GOOGLE_LOGIN_URL=http://localhost:4000/auth/google
-FACEBOOK_LOGIN_URL=http://localhost:4000/auth/facebook
+WS_URL=https://api.lsl-chat.nvquynh.codes
+API_URL=https://api.lsl-chat.nvquynh.codes
+GOOGLE_LOGIN_URL=https://api.lsl-chat.nvquynh.codes/auth/google
+FACEBOOK_LOGIN_URL=https://api.lsl-chat.nvquynh.codes/auth/facebook
