chore: update .env.example & nuxt config

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=4040
-WS_URL=https://api.lsl-chat.nvquynh.codes
-API_URL=https://api.lsl-chat.nvquynh.codes
-GOOGLE_LOGIN_URL=https://api.lsl-chat.nvquynh.codes/auth/google
-FACEBOOK_LOGIN_URL=https://api.lsl-chat.nvquynh.codes/auth/facebook
+NUXT_APP_WS_URL=https://api.lsl-chat.nvquynh.codes
+NUXT_APP_API_URL=https://api.lsl-chat.nvquynh.codes
+NUXT_APP_GOOGLE_LOGIN_URL=https://api.lsl-chat.nvquynh.codes/auth/google
+NUXT_APP_FACEBOOK_LOGIN_URL=https://api.lsl-chat.nvquynh.codes/auth/facebook
