fix: hide log in production environment, store state return function

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT=4040
+ENVIRONMENT=PRODUCTION
 NUXT_ENV_WS_URL=https://api.lsl-chat.nvquynh.codes
 NUXT_ENV_API_URL=https://api.lsl-chat.nvquynh.codes
 NUXT_ENV_GOOGLE_LOGIN_URL=https://api.lsl-chat.nvquynh.codes/auth/google
