--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "socket.io-client": "^4.5.2",
     "vue": "^2.6.14",
     "vue-emoji-picker": "^1.0.3",
+    "vue-image-crop-upload": "^3.0.3",
     "vue-server-renderer": "^2.6.14",
     "vue-snotify": "^3.2.1",
     "vue-template-compiler": "^2.6.14",
