chore:  add env

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT=4040
+NUXT_ENV_BASE_URL=https://lsl-chat.nvquynh.codes
 ENVIRONMENT=PRODUCTION
 NUXT_ENV_WS_URL=https://api.lsl-chat.nvquynh.codes
 NUXT_ENV_API_URL=https://api.lsl-chat.nvquynh.codes
