chore: change environment to node_env

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=4040
+NODE_ENV=PRODUCTION
 NUXT_ENV_BASE_URL=https://lsl-chat.nvquynh.codes
-ENVIRONMENT=PRODUCTION
 NUXT_ENV_WS_URL=https://api.lsl-chat.nvquynh.codes
 NUXT_ENV_API_URL=https://api.lsl-chat.nvquynh.codes
 NUXT_ENV_GOOGLE_LOGIN_URL=https://api.lsl-chat.nvquynh.codes/auth/google
