--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
             --build-arg NUXT_ENV_API_URL=${NUXT_ENV_API_URL} \
             --build-arg NUXT_ENV_GOOGLE_LOGIN_URL=${NUXT_ENV_GOOGLE_LOGIN_URL} \
             --build-arg NUXT_ENV_FACEBOOK_LOGIN_URL=${NUXT_ENV_FACEBOOK_LOGIN_URL} \
+            --build-arg NUXT_ENV_BASE_URL=${NUXT_ENV_BASE_URL} \
             --build-arg NODE_ENV=${NODE_ENV} \
             -t $DOCKER_IMAGE:$DOCKER_TAG .
       - run:
